# pypsutil

./: .cirrus.yml  .coveragerc  .gitignore  .isort.cfg  ORGANIZATION.md  Pipfile  README.md  pylintrc  setup.cfg
.github/workflows/: ci-win.yml  ci.yml
docs/: conf.py  index.rst
pypsutil/: __init__.py  _bsd.py  _cache.py  _detect.py  _errors.py  _ffi.py  _process.py  _psdragonfly.py  _psfreebsd.py  _pslinux.py  _psmacosx.py  _psnetbsd.py  _psopenbsd.py  _psposix.py  _pswindows.py  _system.py  _util.py
pypsutil/compat/: psutil.py
scripts/: check.bat  check.sh  format.bat  format.sh
tests/: test_basic.py  test_children.py  test_cmdline.py  test_cpu_affinity.py  test_cpuinfo.py  test_cred.py  test_environ.py  test_errors.py  test_exe.py  test_exist.py  test_files.py  test_internal.py  test_memory.py  test_name.py  test_net.py  test_popen.py  test_power_sensors.py  test_priority.py  test_resource.py  test_sigmasks.py  test_signal.py  test_system.py  test_temp_sensors.py  test_terminal.py  test_threads.py  test_util.py  test_wait.py  test_zombie.py  util.py
