[metadata]
name = pypsutil
version = attr: pypsutil.__version__
url = https://github.com/cptpcrd/pypsutil
description = A partial reimplementation of psutil in pure Python using ctypes.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = psutil
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: MacOS :: MacOS X

project_urls =
    Documentation = https://pypsutil.readthedocs.io/en/latest

[options]
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions>=3.10.0; python_version < "3.8"

[options.packages.find]
exclude = tests

[options.package_data]
pypsutil = py.typed

# vim: ts=4 expandtab
